objects/Deployment__c.object
<CustomObject>
    <fields>
        <fullName>Deployment_Start_to_Data_Acq_Call__c</fullName>
        <formula>Data_Acquisition_Call_Actual__c - C_A_DS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start to Data Acq Call</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Status__c</fullName>
        <formula>IF( Site_Live__c &gt;0, If( SignRec__c &gt;0,&quot;Red&quot;,&quot;Yellow&quot;),If(Isblank(C_A_ISBC__c),M5__c,&quot;Green&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predicted Deployment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Sub_Type__c</fullName>
        <label>Deployment Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Charity Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Risk Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Manager Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare MSSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milliman Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Self-Insured 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Self-Insured 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Self-Insured 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPA Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verisk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select type of deployment to control milestones and internal deployment targets</inlineHelpText>
        <label>Deployment Type</label>
        <referenceTo>Deployment_Type__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment_in_12__c</fullName>
        <formula>if( Site_Live__c &lt;=0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment in 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Complete_Expected__c</fullName>
        <description>This field is used to track deployment information for the EAB team. Created for CR-20151116-9383</description>
        <formula>Deployment_Start_Expected__c +   VALUE($Label.Development_Complete_Expected_120)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Development Complete (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagnostics_Sent__c</fullName>
        <formula>(blankvalue( Actual_Data_Diagnostics_Sent__c ,Today()) - (IF( RecordType.Name = &quot;CRT Deployment&quot;, Expected_Data_Diagnostics_Sent__c, Expected_Data_Diagnostics_Sent__c)))/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Diagnostics Sent (Deviation)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Acquisition_Regulations_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20150202-8623.</description>
        <label>Do Acquisition Regulations Exist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAB_Connect_Installed_Actual__c</fullName>
        <description>Created for CR-20151116-9384</description>
        <label>EAB Connect Installed (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAB_Connect_Installed_Expected__c</fullName>
        <description>Created for CR-20151116-9384</description>
        <formula>C_A_DS__c + Deployment_Type__r.EAB_Connect_Installed_Expected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAB Connect Installed (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EDBI_ADT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDBI: ADT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elap_Deploy_Start_Exp_to_Deploy_Sign_Off__c</fullName>
        <description>Created for CR-20140605-5715</description>
        <formula>C_A_DC__c - Deployment_Start_Expected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elap:Deploy Start Exp.to Deploy Sign Off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Access_Granted_to_Extract_Start__c</fullName>
        <description>Field created per CR-4109</description>
        <formula>PT_Extract_Start_Date__c  -  PT_Access_Granted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Access Granted to Extract Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Analysis_to_Deployment_Sign_Off__c</fullName>
        <description>CR-3391</description>
        <formula>Analysis_Actual__c - C_A_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Analysis to Deployment Sign-Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Bid_Management_to_Analysis__c</fullName>
        <description>CR-3391</description>
        <formula>Analysis_Actual__c - Bid_Management_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Bid Management to Analysis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Compl_Data_In_to_Diag_Complete__c</fullName>
        <description>Field created per CR-4109</description>
        <formula>C_A_DDC__c  -  C_A_CDI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Compl Data In to Diag Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Complete_Data__c</fullName>
        <formula>(   C_A_CDI__c  - C_A_DS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start-Complete Data In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Complete_Data_c__c</fullName>
        <formula>( C_A_CDI__c - C_A_DS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start-Complete Data In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Complete_Data_in_DAS_Received__c</fullName>
        <formula>C_A_CDI__c  -  DAS_Received_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Complete Data in - DAS Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Complete_Data_in_Site_Live__c</fullName>
        <formula>C_A_CDI__c  -  Site_Live_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Complete Data in - Site Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Contract_Start_to_Deploy_Start__c</fullName>
        <description>Number of Days between Earliest Contract Start Date to Deployment Start (Actual). Created for CR-20140513-5465.</description>
        <formula>C_A_DS__c - Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Contract Start to Deploy Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_DAS_Approved_Site_Live__c</fullName>
        <formula>DAS_Received_Actual__c  -  Site_Live_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed:  DAS Approved - Site Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Data_Collection_to_Required_Dev__c</fullName>
        <description>CR-3991</description>
        <formula>Requirements_Development_Actual__c - Data_Collection_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Data Collection to Required Dev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Data_Diagnostics_Complete__c</fullName>
        <formula>(C_A_DDC__c - C_A_DS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start-Data Diag Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Days_Since_Deployment_Start__c</fullName>
        <formula>today() - C_A_DS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Days Since Deployment Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Days_Since_Site_Build_Complete__c</fullName>
        <description>Created for CR-20150309-8745</description>
        <formula>TODAY() - C_A_ISBC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Days Since Site Build Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Days_Since_UAT_Onsite__c</fullName>
        <description>Created for CR-20150309-8745.</description>
        <formula>TODAY() -  UAT_Onsite__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Days Since UAT Onsite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Days_since_Initial_Data_In__c</fullName>
        <description>Created for CR-20150309-8745</description>
        <formula>TODAY() - C_A_IDI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Days since Initial Data In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Deplm_Start_Recc_Upd_Sign_Off__c</fullName>
        <formula>(Actual_Recurring_Update_Sign_Off__c - C_A_DS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Deplm Start-Recc Upd Sign Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Deploy_SignOff_RecurringUpdate__c</fullName>
        <description>Number of Days between Deployment Sign Off (Actual) and Recurring Update Sign Off. Created for CR-20140513-5465. Updated for CR-20140725-6663</description>
        <formula>Actual_Recurring_Update_Sign_Off__c - C_A_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Deploy SignOff-RecurringUpdate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Deploy_Sign_Off_Target_to_Actual__c</fullName>
        <description>CR-3391</description>
        <formula>C_A_DC__c - C_E_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed:Deploy Sign-Off Target to Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Deploy_Sign_Off_to_Automation__c</fullName>
        <description>Field created per CR-4109</description>
        <formula>PT_Automation_Date__c  -  C_A_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Deploy Sign Off to Automation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Deploy_Start_to_Proj_Planning__c</fullName>
        <description>CR-4342</description>
        <formula>Project_Planning_Actual__c - C_A_DS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Deploy Start to Proj Planning</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Deploy_Start_to_Tech_Plan_Compl__c</fullName>
        <description>Field created per CR-4109</description>
        <formula>C_A_TPC__c  -  C_A_DS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Deploy Start to Tech Plan Compl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Deploy_Start_to_Welcome__c</fullName>
        <description>CR-4342</description>
        <formula>Welcome_Call_Actual__c - C_A_DS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Deploy Start to Welcome</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Deployment_Sign_Off__c</fullName>
        <formula>( C_A_DC__c - C_A_DS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start-Deployment Sign Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Deployment_Sign_Off_to_Last_MI__c</fullName>
        <description>CR-3391</description>
        <formula>Last_Member_Interaction__c - C_A_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Deployment Sign-Off to Last MI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Deployment_Sign_Off_to_Start__c</fullName>
        <formula>IF(ISBLANK( C_A_DC__c ), TODAY (), C_A_DC__c) - C_A_DS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Deployment Sign Off to Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Diag_Compl_to_Init_Site_Build__c</fullName>
        <description>Field created per CR-4109</description>
        <formula>C_A_ISBC__c  -  C_A_DDC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Diag Compl to Init Site Build</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Diag_Complt_Internal_Validtn__c</fullName>
        <description>Created as part of CR-4001</description>
        <formula>C_A_IVC__c - C_A_DDC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Diag Complt - Internal Validtn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Extract_Start_to_Init_Data_In__c</fullName>
        <description>Field created per CR-4109</description>
        <formula>C_A_IDI__c  -  PT_Extract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Extract Start to Init Data In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Feedback_Diagnostics_Complete__c</fullName>
        <description>Created as part of CR-4001</description>
        <formula>C_A_DDC__c - Feedback_on_Initial_Data_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Feedback - Diagnostics Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Hist_Data_to_Intl_Site_Build__c</fullName>
        <description>CR-4342</description>
        <formula>C_A_ISBC__c - Historical_Data_Received_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Hist Data to Intl. Site Build</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Init_Data_In_to_Compl_Data_In__c</fullName>
        <description>Field created per CR-4109</description>
        <formula>C_A_CDI__c -  C_A_IDI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Init Data In to Compl Data In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Init_Site_Bld_to_Deploy_Signoff__c</fullName>
        <description>Field created per CR-4109</description>
        <formula>C_A_DC__c  -  C_A_ISBC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Init Site Bld to Deploy Signoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Initial_Date_In_Feedback__c</fullName>
        <description>Created as part of CR-4001</description>
        <formula>Feedback_on_Initial_Data_Actual__c - C_A_IDI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Initial Date In - Feedback</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Int_Validation_to_Dep_Sign_Off__c</fullName>
        <description>Created as part of CR 4287 (Elapsed time between Internal Validation Complete (Actual) and Deployment Sign Off (Actual)</description>
        <formula>C_A_DC__c - C_A_IVC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Int Validation to Dep Sign Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Integration_Sign_Off_Deviation__c</fullName>
        <description>Created for CR-20141023-7865.</description>
        <formula>Integration_Sign_Off_Actual__c - Integration_Sign_Off_Expected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Integration Sign Off Deviation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Internal_Validation_Site_Demo__c</fullName>
        <description>Created as part of CR-4001</description>
        <formula>Actual_Initial_Site_Demo__c - C_A_IVC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Internal Validation - Site Demo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Legal_Comp_Redlining_Comp__c</fullName>
        <formula>Legal_Complete_Actual__c  -  Redlining_Complete_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Legal Comp - Redlining Comp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Marketing_Data_Acquisition_Call__c</fullName>
        <description>Created for CR-20150708-9068.</description>
        <formula>Marketing_Data_Acquisition_Call_Actual__c - Marketing_Data_Acquisition_Call_Exp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Marketing Data Acquisition Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Program_Dev_Comp_Deviation__c</fullName>
        <description>Created for CR-20141023-7865.</description>
        <formula>Program_Development_Complete_Actual__c - Program_Development_Complete_Expected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Program Dev Comp Deviation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Redlining_Comp_Template_Sent__c</fullName>
        <formula>Redlining_Complete_Actual__c  -  Template_Sent_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Redlining Comp - Template Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Requirement_Dev_to_Supplier_Eng__c</fullName>
        <description>CR-3391</description>
        <formula>Supplier_Engagement_Actual__c - Requirements_Development_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Requirement Dev to Supplier Eng</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Site_Demo_to_Deplyent_Complt__c</fullName>
        <description>Created as part of CR-4001</description>
        <formula>C_A_DC__c - Actual_Initial_Site_Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Site Demo to Deplymnt Complt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Supplier_Engagement_to_Bid_Mang__c</fullName>
        <description>CR-3391</description>
        <formula>Bid_Management_Actual__c - Supplier_Engagement_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Supplier Engagement to Bid Mang</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Tech_Plan_Compl_to_Access_Grant__c</fullName>
        <description>Field created per CR-4109</description>
        <formula>PT_Access_Granted_Date__c  -  C_A_TPC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Tech Plan Compl to Access Grant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Tech_Planning_Initial_Data_In__c</fullName>
        <formula>C_A_IDI__c -  C_A_TPC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Tech Planning - Initial Data In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Tech_Planning_SIte_Build_Comp__c</fullName>
        <formula>C_A_ISBC__c - C_A_TPC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Tech Planning - SIte Build Comp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Template_Sent_Deployment_Start__c</fullName>
        <formula>Template_Sent_Actual__c  -  C_A_DS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed:Template Sent - Deployment Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Welc_to_SampFeed__c</fullName>
        <formula>(C_A_IDI__c - C_A_DS__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start-Initial Data In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Welc_to_TechPlan__c</fullName>
        <formula>( C_A_TPC__c - C_A_DS__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start-Tech Planning Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Welcome_Call_Actual_to_Today__c</fullName>
        <formula>TODAY () - Welcome_Call_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Welcome Call (Actual) to Today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Welcome_Call_to_Data_Collection__c</fullName>
        <description>CR-3391</description>
        <formula>Data_Collection_Actual__c - Welcome_Call_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Welcome Call to Data Collection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Welcome_Call_to_Start_Date__c</fullName>
        <description>Created as part of CR-4001</description>
        <formula>C_A_DS__c - Project_Welcome_Call_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed: Welcome Call to Start Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Welcome_to_Site_Demo__c</fullName>
        <formula>(blankvalue( Actual_Initial_Site_Demo__c, Today()) - C_A_DS__c)/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start to Site Demo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Welcome_to_Site_Live__c</fullName>
        <formula>( C_A_ISBC__c - C_A_DS__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start-Initial Site Build</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed__c</fullName>
        <formula>(C_A_DC__c - C_A_ISBC__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial St. Build Comp-Deploy Sign Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elpsd_Complete_Data_in_Intl_Site_Demo__c</fullName>
        <formula>C_A_CDI__c  -  Actual_Initial_Site_Demo__c</formula>
        <label>Elpsd:Complete Data in - Intl Site Demo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elpsd_Intl_Site_Demo_Deployment_End__c</fullName>
        <formula>Actual_Initial_Site_Demo__c  -  C_A_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elpsd : Intl Site Demo - Deployment End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Type__c</fullName>
        <label>Engagement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consultation Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Compass Connect Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Click Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Register</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Sign-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Data Extraction Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engineer_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineer Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployments4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engineer_on_Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineer on Implementation</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployments5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrichment_service_diagnostics_Actual__c</fullName>
        <description>Thic field is created for CR-20150623-9023.</description>
        <label>Enrichment service diagnostics (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrichment_service_diagnostics_Exp__c</fullName>
        <description>This field is created for CR-20150623-9023.</description>
        <label>Enrichment service diagnostics (Exp.)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrichment_service_diags_resolved_Act__c</fullName>
        <description>Thic field is created for CR-20150623-9023.</description>
        <label>Enrichment service diags resolved (Act)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrichment_service_diags_resolved_Exp__c</fullName>
        <description>This field is created for CR-20150623-9023.</description>
        <label>Enrichment service diags resolved (Exp.)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrichment_service_setup_complete_Act__c</fullName>
        <description>Thic field is created for CR-20150623-9023.</description>
        <label>Enrichment service setup complete (Act)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrichment_service_setup_complete_Exp__c</fullName>
        <description>This field is created for CR-20150623-9023.</description>
        <label>Enrichment service setup complete (Exp.)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enterprise_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR-3516</description>
        <label>Enterprise Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Establish_VPN_Connectivity_Actual__c</fullName>
        <label>Establish VPN Connectivity (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Establish_VPN_Connectivity_Expected__c</fullName>
        <label>Establish VPN Connectivity (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Number__c</fullName>
        <label>Supplier Portal Event I.D.</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Engagement__c</fullName>
        <description>Created as part of CR-5000</description>
        <inlineHelpText>For C-suite contacts only. Grading based on a 1-4 scale, 1 being very disengaged and 4 being very engaged.</inlineHelpText>
        <label>Executive Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deployments (Executive Sponsor)</relationshipLabel>
        <relationshipName>Deployments1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>